refactor: move view extensions from widgets to tools module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Cassidy</string>
+    <string name="label_examples_app">Example Apps</string>
 </resources>
